# descent

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pixi.toml  pyproject.toml  versions.json
.github/: codecov.yaml
.github/workflows/: ci.yaml
0.6.0/: 404.html  index.html  sitemap.xml
0.6.0/development/: index.html
0.6.0/reference/: index.html
0.6.0/reference/SUMMARY/: index.html
0.6.0/reference/optim/: index.html
0.6.0/reference/targets/: index.html
0.6.0/reference/targets/dimers/: index.html
0.6.0/reference/targets/energy/: index.html
0.6.0/reference/targets/thermo/: index.html
0.6.0/reference/train/: index.html
0.6.0/reference/utils/: index.html
0.6.0/reference/utils/dataset/: index.html
0.6.0/reference/utils/loss/: index.html
0.6.0/reference/utils/molecule/: index.html
0.6.0/reference/utils/reporting/: index.html
0.6.0/search/: search_index.json
descent/: train.py
descent/optim/: _lm.py
descent/targets/: dimers.py  energy.py  thermo.py
descent/tests/: conftest.py  test_train.py
descent/tests/targets/: test_dimers.py  test_energy.py  test_thermo.py
descent/utils/: dataset.py  loss.py  reporting.py
devtools/envs/: base.yaml
docs/: .gitignore  README.md  conf.py  examples.md  index.md  installation.md  optimization.md  releasehistory.md  targets.md  training.md
docs/api/: optim.rst  targets.rst  train.rst  utils.rst
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/development/: index.html
latest/reference/: index.html
latest/reference/SUMMARY/: index.html
latest/reference/optim/: index.html
latest/reference/targets/: index.html
latest/reference/targets/dimers/: index.html
latest/reference/targets/energy/: index.html
latest/reference/targets/thermo/: index.html
latest/reference/train/: index.html
latest/reference/utils/: index.html
latest/reference/utils/dataset/: index.html
latest/reference/utils/loss/: index.html
latest/reference/utils/molecule/: index.html
latest/reference/utils/reporting/: index.html
latest/search/: search_index.json
