[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=80", "setuptools-scm>=8" ]

[project]
name = "descent"
description = "Differentiably compute energies of molecules using SMIRNOFF force fields."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name = "Simon Boothroyd" } ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]

[tool.setuptools]
packages.find.include = [ "descent*" ]

[tool.setuptools_scm]

[tool.ruff]
extend-include = [ "*.ipynb" ]
lint.select = [ "B", "B9", "C", "E", "F", "W" ]
lint.ignore = [ "C901" ]
lint.pydocstyle.convention = "google"

[tool.mypy]
python_version = "3.12"
exclude = "descent/tests/"
plugins = "pydantic.mypy"
warn_unused_configs = true
warn_unused_ignores = true
warn_incomplete_stub = true
show_error_codes = true
allow_redefinition = true
overrides = [ { module = [
  "rdkit",
  "datasets",
  "openff.toolkit.*",
] } ]
ignore_missing_imports = true
disable_error_code = [ "arg-type", "assignment", "union-attr" ]  # TODO: Try to remove some of these

[tool.coverage]
run.omit = [ "**/tests/*" ]
report.exclude_lines = [
  "@overload",
  "if __name__ = .__main__.:",
  "if TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
